--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1;
 }
@@ -11,6 +11,7 @@ textarea {
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  /* height: 3rem; */
 }
 
 .jumbotron {
@@ -34,12 +35,17 @@ textarea {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
+
+  /* my rules */
+  /* display: flex;
+  align-items: flex-start; */
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  width: 3rem;
 }
 
 .past {
@@ -63,9 +69,15 @@ textarea {
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
+  /* my rules */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+/* My rules */
