--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ textarea {
   border-radius: 15px;
 }
 
+/* Container for entire row  */
 .row {
   white-space: pre-wrap;
   height: 80px;
@@ -41,6 +42,7 @@ textarea {
   align-items: flex-start; */
 }
 
+/* 9AM */
 .hour {
   background-color: #ffffff;
   color: #000000;
